Flowmini/flowmini_v23_token_tree_parser_bridge/examples/fail/bad_type_narrowing.flow
import "../../std/numbers.flow"

program bad_type_narrowing

main {
    ordinary : Integer(5)
    positive : PositiveInteger(1)

    ordinary -> positive
    print positive
}
